# social-download-manager

./: .clinerules  .gitignore  CHANGELOG.md  README.md  README_V2.md  REFACTOR_SETUP.md  SECURITY.md  Sumerize.txt  Summarize.txt  async_optimization_results.json  build.py  check_current_db.py  check_database.py  check_db.py  check_translations.py  component_validation_report_20250601_232534.txt  comprehensive_mvp_test.py  comprehensive_validation_report_20250601_232449.txt  comprehensive_validation_report_20250601_232512.txt  comprehensive_validation_report_20250601_232535.txt  comprehensive_validation_report_20250601_232617.txt  comprehensive_validation_report_20250601_232637.txt  config.json  config.template.json  create_icon.py  create_test_db.py  debug_mainwindow.py  debug_migration.py  debug_videoinfotab.py  demo_logging_strategy.py  download_functional_test.py  env.template  error_handling_cross_platform_report.json  final_mvp_validation.py  final_verification.py  fix_action_column.py  fix_decorator_bug.py  fix_get_info_crash.py  fix_theme_to_v121_dark.py  fix_ui_theme_v121.py  (+86 more)
.taskmaster/: README.md
core/: README_APP_CONTROLLER.md  __init__.py  adapter_integration.py  app_controller.py  component_error_handlers.py  config_manager.py  constants.py  error_categorization.py  error_management.py  event_system.py  global_error_handler.py  logging_config.py  logging_strategy.py  logging_system.py  main_entry_orchestrator.py  recovery_engine.py  recovery_strategies.py  shutdown_manager.py  unicode_error_handling.py  unicode_logging.py  user_feedback.py
data/: __init__.py  error_states.json
docs/: DELIVERABLES_INDEX.md  DELIVERY_PACKAGE_V2.0.md  FEATURE_PARITY_CHECKLIST.md  MIGRATION_COMPLETE.md  README.md  README_COMPONENTS.md  V2_IMPROVEMENT_ANALYSIS.md  api_reference_v2.md  architecture_bridge_documentation.md  architecture_overview_v2.md  component_architecture.md  component_details_v2.md  component_showcase.py  contributing_guide.md  developer_architecture_guide.md  developer_setup_guide.md  error_handling_architecture.md  error_handling_developer_guide.md  error_handling_maintenance_guide.md  error_handling_support_guide.md  extension_development_guide.md  getting_started_guide.md  migration_to_v2.md  migration_tutorial.md  release_notes_v2.0.md  repository_implementation.md  shutdown_procedures.md  task18-data-integration-guide.md  task18-quick-reference.md  task30_dependency_analysis.md  troubleshooting_faq.md  troubleshooting_v2.md  user_installation_guide.md  user_manual.md  v2_architecture_overview.md  v2_migration_guide.md  v2_startup_sequence.md
documentary/: activeContext.md  progress.md  techContext.md
localization/: __init__.py  english.py  language_manager.py  vietnamese.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: comprehensive_validation_test.py  edge_case_testing.py  migrate.py  migration_execution_strategy.py  performance_scalability_testing.py  release_validation.py  rollback_testing_final_report.py  run_component_tests.py  task-complexity-report.json
scripts_dev/: README.md  migration_success_criteria.py
test_datasets/: datasets_summary.json
tests/: README.md  README_CONTROLLER_TESTING.md  __init__.py  integration_config.py  integration_environment_setup.py  integration_test_plan.md  integration_test_plan_v2_architecture.md  integration_test_runner.py  run_factory_tests.py  run_tests.py  test_app_controller.py  test_app_controller_edge_cases.py  test_app_controller_integration.py  test_app_controller_ui_integration.py  test_base.py  test_component_interactions.py  test_components.py  test_controller_comprehensive.py  test_controller_utilities.py  test_database.py  test_end_to_end_scenarios.py  test_enhanced_integration.py  test_enhanced_repository.py  test_factory_error_handling.py  test_fixtures.py  test_integration.py  test_migrations.py  test_performance_integration.py  test_platform_factory_integration.py  test_platform_instantiation.py  test_platform_registration.py  test_regression_integration.py  test_repositories.py  test_repository.py  test_task37_validation.py  test_transactions.py  test_utils.py  test_youtube_handler.py  ui_ux_test_plan.md
ui/: __init__.py  about_dialog.py  compatibility.py  donate_tab.py  downloaded_videos_tab.py  downloaded_videos_tab_fixed.py  main_window.py  temp.py  update_dialog.py  video_info_tab.py
utils/: __init__.py  database_optimizer.py  db_manager.py  download_thread.py  download_utils.py  downloader.py  platform_factory.py  platform_handler.py  updater.py  (+2 more)
(+444 files in other folders)
